[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fedramp-control-validator"
version = "0.1.0"
description = "Validate an AWS environment against the FedRAMP Moderate baseline (NIST 800-53 Rev 5) from AWS Config findings, score control families, and export OSCAL 1.1.2 Assessment Results."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Juliet Rodriguez" }]
keywords = ["fedramp", "oscal", "nist-800-53", "compliance", "aws", "aws-config", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "rich>=13.0",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
fedramp-control-validator = "fedramp_control_validator.cli:main"

[project.urls]
Homepage = "https://github.com/JulietRodriguez/fedramp-control-validator"
Issues = "https://github.com/JulietRodriguez/fedramp-control-validator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
